# inTUItive

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  library.h
examples/: CMakeLists.txt  counter.c  dashboard.c  demo.c  file_manager.c  hello_world.c  key_test.c  layout_demo.c  mouse_demo.c  scrollbar_demo.c  scrollview_demo.c  spinner_demo.c  styling_demo.c  sysmon.c  table_demo.c  toast_demo.c  todo_app.c
include/: intuitive.h
src/: CMakeLists.txt  animation.c  component.c  diff.c  events.c  focus.c  layout.c  library.c  renderer.c  terminal.c  tui.c
src/components/: aligned_stack.c  button.c  hstack.c  input.c  list.c  modal.c  padding.c  scrollview.c  spacer.c  spinner.c  style.c  table.c  text.c  toast.c  vstack.c
src/internal/: animation.h  component.h  diff.h  events.h  focus.h  layout.h  renderer.h  terminal.h  tui.h
